# financial-accounting

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties  startup.sh
.github/workflows/: django.yml  run_flake8.yml  run_linters.yml  run_tests.yml
apps/attachments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/attachments/fixtures/: default_attachments.json
apps/attachments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_attachment_created_at_and_more.py  0003_alter_attachment_file.py
apps/common/: helpers.py  models.py  tests.py
apps/debts/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/debts/migrations/: 0001_initial.py  0002_debt_currency.py  0002_initial.py  0003_alter_debt_created_at_alter_debt_updated_at.py  0003_alter_debt_deadline.py  0004_debt_partially_paid_debt_partially_paid_amount.py  0005_rename_partially_paid_debt_partial_paid_and_more.py  0006_alter_debt_partial_paid_amount.py  0007_remove_debt_currency.py  0008_alter_debt_type.py  0009_rename_person_debt_user.py
apps/expenses/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/expenses/management/commands/: load_categories.py
apps/expenses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_created_at_alter_category_updated_at_and_more.py  0003_alter_category_image.py  0004_alter_category_unique_together.py  0005_remove_expense_currency.py
apps/incomes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/incomes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_income_created_at_alter_income_updated_at.py  0003_remove_income_currency.py
apps/users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_updated_at.py  0002_user_currency.py
apps/users/templates/: monthly_report.html
config/: celery.py  schema.py  settings.py  urls.py
nginx/: default.conf
