[tool.poetry]
name = "financial-accounting"
version = "0.1.0"
description = "An app where you can manage your finances!"
authors = ["artemkka <artiom.preatca@ebs-integrator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-jazzmin = "^2.6.0"
flake8 = "^5.0.4"
drf-yasg = "^1.21.4"
black = "^22.10.0"
pre-commit = "^2.20.0"
djangorestframework-simplejwt = "^5.2.2"
django-filter = "^22.1"
faker = "^15.3.4"
coverage = "^6.5.0"
celery = "^5.2.7"
redis = "^4.4.0"
django-celery-beat = "^2.4.0"
django-celery-results = "^2.4.0"
django-postgres-extra = "^2.0.6"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
flower = "^1.2.0"
sentry-sdk = "^1.12.1"
django-debug-toolbar = "^3.8.1"

[tool.black]
line-length = 120
target-version = ["py310"]


[tool.vulture]
min_confidence = 65
paths = ["apps"]
exclude = [
    "**/fixtures/*",
    "**/tests/*",
    "**/migrations/*",
    "users/models.py",
    "expenses/views.py",
    "debts/views.py",
    "incomes/views.py",
    "users/views.py",
]

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.core.masonry.api"
